# intervue

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03acd2eda716_add_candidate_status_and_timestamps.py  052bb231a57a_add_phone_to_candidates.py  19de9c48ec93_create_analyses_table.py  4cc727b21d9e_add_relationships_and_timestamps.py  4d4370afaef1_add_experience_fields_to_roles.py  73038c78702d_added_created_at_in_both_models_added_.py  b46318c4df37_create_roles_and_candidates_tables.py  b70d57e71847_add_avatar_path_to_candidates.py  c0a132750443_add_resume_profiles_table.py  cfd0adfc12d1_fix_analysis_table_add_technical_score_.py
backend/app/: main.py
backend/app/ai/: comparator.py  extractor.py  resume_parser.py  summarizer.py  transcript_loader.py  transcript_parser.py
backend/app/api/: analysis.py  candidate.py  role.py
backend/app/db/: dependencies.py  session.py
backend/app/models/: __init__.py  analysis.py  candidate.py  resume_profile.py  role.py
backend/app/schemas/: analysis.py  candidate.py  role.py
backend/app/services/: analysis_service.py
backend/app/utils/: file_handler.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/candidate/: layout.tsx
frontend/app/compare/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/roles/: layout.tsx
frontend/app/settings/: page.tsx
frontend/components/: app-shell.tsx
frontend/lib/: api.ts  pipeline-store.ts
(+5 files in other folders)
