[project]
name = "intervue-backend"
version = "0.1.0"
description = "Backend for Intervue"
requires-python = ">=3.11"

dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]",
]

[tool.uv]
package = false
